{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 296,
  "lineage": "91dd0b55-d1a7-a199-e3e9-c2ab58cf2e0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccc013104a586700",
            "association_id": "eipassoc-06cb3e62314470816",
            "domain": "vpc",
            "id": "eipalloc-0ccc013104a586700",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04247ef81326f6038",
            "private_dns": "ip-10-0-1-183.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-52-199-216-42.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.216.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:route-table/rtb-03f4c16ab066dbceb",
            "id": "rtb-03f4c16ab066dbceb",
            "owner_id": "707713643480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-080744d567b019656",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.tf-gw",
            "module.nat.aws_nat_gateway.example",
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:route-table/rtb-038252fa96450dcc7",
            "id": "rtb-038252fa96450dcc7",
            "owner_id": "707713643480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e001ee36a235d79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.tf-gw",
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd5db8dac65d703d",
            "route_table_id": "rtb-03f4c16ab066dbceb",
            "subnet_id": "subnet-07104d07492eff71b"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_route_table.private_route_table",
            "module.igw.aws_internet_gateway.tf-gw",
            "module.nat.aws_nat_gateway.example",
            "module.new_vpc.aws_vpc.tf-vpc",
            "module.private_subnet_2.aws_subnet.vpc-subnet",
            "module.public_subnet_1.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c151b84cfe8e5dc0",
            "route_table_id": "rtb-038252fa96450dcc7",
            "subnet_id": "subnet-033fb5c43eed49c7b"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "module.igw.aws_internet_gateway.tf-gw",
            "module.new_vpc.aws_vpc.tf-vpc",
            "module.public_subnet_1.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:security-group/sg-0b3239acc7b8fcc11",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b3239acc7b8fcc11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220826174233666600000003",
            "name_prefix": "terraform-",
            "owner_id": "707713643480",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc",
            "module.private_subnet_2.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:internet-gateway/igw-06e001ee36a235d79",
            "id": "igw-06e001ee36a235d79",
            "owner_id": "707713643480",
            "tags": {
              "Name": "terrform-igw"
            },
            "tags_all": {
              "Name": "terrform-igw"
            },
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccc013104a586700",
            "connectivity_type": "public",
            "id": "nat-080744d567b019656",
            "network_interface_id": "eni-04247ef81326f6038",
            "private_ip": "10.0.1.183",
            "public_ip": "52.199.216.42",
            "subnet_id": "subnet-033fb5c43eed49c7b",
            "tags": {
              "Name": "terraform-nat-gate"
            },
            "tags_all": {
              "Name": "terraform-nat-gate"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "module.igw.aws_internet_gateway.tf-gw",
            "module.new_vpc.aws_vpc.tf-vpc",
            "module.public_subnet_1.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:security-group/sg-0adc7602e2acb472c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adc7602e2acb472c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220826174232525300000002",
            "name_prefix": "terraform-",
            "owner_id": "707713643480",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:security-group/sg-04a7428ed8d9547d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a7428ed8d9547d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220826174232521400000001",
            "name_prefix": "terraform-",
            "owner_id": "707713643480",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:vpc/vpc-0b90b22852bcf9dd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c68d8b3b0397864",
            "default_route_table_id": "rtb-03757a8a02dae1e80",
            "default_security_group_id": "sg-096203bc3e318ae3a",
            "dhcp_options_id": "dopt-5cd27739",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b90b22852bcf9dd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03757a8a02dae1e80",
            "owner_id": "707713643480",
            "tags": {
              "Name": "Terraform-vpc"
            },
            "tags_all": {
              "Name": "Terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.private-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f36dcfcc94112ea1",
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:instance/i-01c1256668ff139ac",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c1256668ff139ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "durga-private",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e4b25bca3d96378",
            "private_dns": "ip-10-0-3-8.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0113c70e8dcd99aa3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0adc7602e2acb472c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07104d07492eff71b",
            "tags": {
              "Name": "terraform-private-ec2"
            },
            "tags_all": {
              "Name": "terraform-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adc7602e2acb472c"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.example",
            "module.new_vpc.aws_security_group.private_sg",
            "module.private_subnet_2.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:subnet/subnet-0d1b02dd5be3a8d4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b02dd5be3a8d4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707713643480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:subnet/subnet-07104d07492eff71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07104d07492eff71b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707713643480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-2"
            },
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f36dcfcc94112ea1",
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:instance/i-04be13743cd0bbd91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04be13743cd0bbd91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "durga-private",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a8d23c0eb8de79d",
            "private_dns": "ip-10-0-1-97.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "public_ip": "13.115.133.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc35ec6bbbb2d528",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04a7428ed8d9547d0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033fb5c43eed49c7b",
            "tags": {
              "Name": "terraform-public-ec2"
            },
            "tags_all": {
              "Name": "terraform-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a7428ed8d9547d0"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.example",
            "module.new_vpc.aws_security_group.public_sg",
            "module.public_subnet_1.aws_subnet.vpc-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:707713643480:subnet/subnet-033fb5c43eed49c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033fb5c43eed49c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707713643480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-subnet-1"
            },
            "vpc_id": "vpc-0b90b22852bcf9dd3"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    }
  ]
}